--- a/src/style.less
+++ b/src/style.less
@@ -39,7 +39,7 @@ main {
     color:#fff;
     cursor: pointer;
     display: block;
-    margin:10px;
+    margin:1px;
     background:#000;
     padding: 2px 8px;
 }
@@ -55,3 +55,5 @@ h1 {
     margin: 0; font-size: 10px; position:fixed;
     bottom: 0; right: 10px;
 }
+
+#oLogo { color: #000; padding: 1px 8px;}
