--- a/src/style.less
+++ b/src/style.less
@@ -1,9 +1,11 @@
-
+@black:rgb(2,2,2);
+@white:rgb(222,222,222);
+@grayDark:rgb(33,33,33);
 html,
 body {
     height: 100%;
-    background-color: #222;
-    color: #fff;
+    background-color: @grayDark;
+    color: @white;
 }
 
 body {
@@ -31,23 +33,15 @@ main {
     .clear_fix();
 }
 main {
+    position: relative;
     canvas {}
 }
 
-.btnp5 {
-    font-size:11px;
-    color:#fff;
-    cursor: pointer;
-    display: block;
-    margin:1px;
-    background:#000;
-    padding: 2px 8px;
-}
 
 header {
     position: absolute;
     top: 200px; left: -300px;
-    background-color: #fff;
+    background-color: @white;
 }
 
 h1 {
@@ -56,7 +50,7 @@ h1 {
     bottom: 0; right: 10px;
 }
 
-#oLogo { color: #000; padding: 1px 8px;}
+#oLogo { color: @black; padding: 1px 8px;}
 
 
 .infodiv { padding: 10px;
@@ -69,4 +63,23 @@ h1 {
     &::after {content: "]";}
   
   }
+}
+
+
+#oItemList {
+    .btnp5 {
+        font-size:11px;
+        color:@white;
+        cursor: pointer;
+        display: block;
+        font-size: 14px;
+        margin:5px;
+        background:@black;
+        padding: 6px 8px;
+    }
+    #ologo {
+        color: @white;
+        background-color: transparent;
+        padding-left: 0; padding-right: 0;
+    }
 }
